--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,20 @@
   justify-content: center;
   flex-direction: column;
 }
+
+.bar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
+}
+
+.paditem {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
+.shadow {
+  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11),
+    0 5px 15px 0 rgba(0, 0, 0, 0.08);
+}
